; ModuleID = '/home/carl/AnghaBench/linux/drivers/clocksource/extr_timer-armada-370-xp.c_armada_370_xp_timer_dying_cpu.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clocksource/extr_timer-armada-370-xp.c_armada_370_xp_timer_dying_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32, i32 (%struct.clock_event_device*)* }

@armada_370_xp_evt = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @armada_370_xp_timer_dying_cpu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @armada_370_xp_timer_dying_cpu(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.clock_event_device*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @armada_370_xp_evt, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.clock_event_device* @per_cpu_ptr(i32 %4, i32 %5)
  store %struct.clock_event_device* %6, %struct.clock_event_device** %3, align 8
  %7 = load %struct.clock_event_device*, %struct.clock_event_device** %3, align 8
  %8 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %7, i32 0, i32 1
  %9 = load i32 (%struct.clock_event_device*)*, i32 (%struct.clock_event_device*)** %8, align 8
  %10 = load %struct.clock_event_device*, %struct.clock_event_device** %3, align 8
  %11 = call i32 %9(%struct.clock_event_device* %10)
  %12 = load %struct.clock_event_device*, %struct.clock_event_device** %3, align 8
  %13 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @disable_percpu_irq(i32 %14)
  ret i32 0
}

declare dso_local %struct.clock_event_device* @per_cpu_ptr(i32, i32) #1

declare dso_local i32 @disable_percpu_irq(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
